--- a/RopeysDVD/bin/RopeysDVD.dll.config
+++ b/RopeysDVD/bin/RopeysDVD.dll.config
@@ -17,5 +17,6 @@
 	<!--database connection-->
 	<appSettings>
 		<add key="DBConnection" value="Data Source=.\SQLEXPRESS;Initial Catalog=MSAPPDB; Integrated Security=True"/>
+		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
 	</appSettings>
 </configuration>
