--- a/RopeysDVD/RopeysDVD.csproj
+++ b/RopeysDVD/RopeysDVD.csproj
@@ -83,6 +83,7 @@
     <Content Include="Pages\Producer.aspx" />
     <Content Include="Pages\Studio.aspx" />
     <Content Include="Pages\Unauthorized.aspx" />
+    <Content Include="Pages\Users.aspx" />
     <Content Include="Web.config" />
     <Content Include="Pages\Home.aspx" />
   </ItemGroup>
@@ -175,6 +176,13 @@
       <DependentUpon>Producer.aspx</DependentUpon>
     </Compile>
     <Compile Include="Model\Producer.cs" />
+    <Compile Include="Pages\Users.aspx.cs">
+      <DependentUpon>Users.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Users.aspx.designer.cs">
+      <DependentUpon>Users.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pages\Home.aspx.cs">
       <DependentUpon>Home.aspx</DependentUpon>
