--- a/RopeysDVD/RopeysDVD.csproj
+++ b/RopeysDVD/RopeysDVD.csproj
@@ -89,6 +89,9 @@
     <Content Include="Pages\Home.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Dashboard.cs" />
+    <Compile Include="Model\Index.cs" />
+    <Compile Include="Model\OutdatedMovie.cs" />
     <Compile Include="Pages\Actor.aspx.cs">
       <DependentUpon>Actor.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
