--- a/RopeysDVD/RopeysDVD.csproj
+++ b/RopeysDVD/RopeysDVD.csproj
@@ -81,6 +81,7 @@
     <Content Include="Pages\LoginPage.aspx" />
     <Content Include="Pages\Member.aspx" />
     <Content Include="Pages\MembershipCategory.aspx" />
+    <Content Include="Pages\OutdatedMovie.aspx" />
     <Content Include="Pages\Producer.aspx" />
     <Content Include="Pages\Studio.aspx" />
     <Content Include="Pages\Unauthorized.aspx" />
@@ -179,6 +180,13 @@
       <DependentUpon>MembershipCategory.aspx</DependentUpon>
     </Compile>
     <Compile Include="Model\MembershipCategory.cs" />
+    <Compile Include="Pages\OutdatedMovie.aspx.cs">
+      <DependentUpon>OutdatedMovie.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\OutdatedMovie.aspx.designer.cs">
+      <DependentUpon>OutdatedMovie.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Pages\Producer.aspx.cs">
       <DependentUpon>Producer.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
